# ai-accelerated-cfd

./: .gitignore  AI_MODELS_REFERENCE.md  CMakeLists.txt  Dockerfile  EXECUTIVE_SUMMARY.md  FAQ.md  FINAL_REVIEW_GUIDE.md  LIMITATIONS.md  MID_REVIEW_DELIVERABLES.md  NAVIER_STOKES_AI_HPC_PROJECT_COMPLETE_GUIDE.md  OPENMP_BUILD_GUIDE.md  PRESENTATION_SLIDES.md  PROJECT_ROADMAP_AND_CHECKLIST.md  PROJECT_SUMMARY.txt  README.md  REPRODUCIBILITY.md  RESULTS.md  SETUP.md  USE_CASES.md  VALIDATION.md  requirements.txt  run_demo.bat
.github/workflows/: ci.yml
include/: grid.h  parallel.h  solver.h
notebooks/: GPU_Training_Colab.ipynb
ns_solver/: README.md  ns_solver.cpp  train_ai.py
python/: __init__.py  ai_integrated_solver.py  generate_data.py  generate_training_data.py  hybrid_solver.py  visualize.py
python/models/: convlstm.py
python/training/: train.py
results/: PARALLEL_BENCHMARKS.md  PERFORMANCE_BENCHMARKS.md  PHYSICS_VALIDATION.md  checkpoint.vtk  parallel_benchmark_results.md  validation_log.txt  validation_report.md
scripts/: ai_accelerated_solver.py  baseline_comparison.py  benchmark_100_cases.py  benchmark_parallel.py  comprehensive_benchmark.py  comprehensive_validation.py  hybrid_gpu_timing.py  hybrid_performance_comparison.py  large_scale_demo.py  multi_query_benchmark.py  physics_informed_training.py  physics_validation.py  physics_validation_detailed.py  physics_validation_multiquery.py  train_pressure_predictor.py  uncertainty_quantification.py  validate_pressure_predictor.py
src/: main.cpp  optimized_solver.cpp  parallel_benchmark.cpp  win_parallel_benchmark.cpp
src/core/: grid.cpp  solver.cpp
